// Vitest Snapshot v1

exports[`edits a single song 1`] = `
<div class="edit-song" data-testid="edit-song-form" tabindex="0" data-v-210b4214="">
  <form data-v-210b4214="">
    <header data-v-210b4214=""><span class="cover" style="background-image: url(http://localhost/album.jpg);" data-v-210b4214=""></span>
      <div class="meta" data-v-210b4214="">
        <h1 class="" data-v-210b4214="">Rocket to Heaven</h1>
        <h2 data-testid="displayed-artist-name" class="" data-v-210b4214="">Led Zeppelin</h2>
        <h2 data-testid="displayed-album-name" class="" data-v-210b4214="">IV</h2>
      </div>
    </header>
    <main class="tabs" data-v-210b4214="">
      <div class="clear" role="tablist" data-v-210b4214=""><button id="editSongTabDetails" aria-selected="true" aria-controls="editSongPanelDetails" role="tab" type="button" data-v-210b4214=""> Details </button><button id="editSongTabLyrics" aria-selected="false" aria-controls="editSongPanelLyrics" data-testid="edit-song-lyrics-tab" role="tab" type="button" data-v-210b4214=""> Lyrics </button></div>
      <div class="panes" data-v-210b4214="">
        <div id="editSongPanelDetails" aria-labelledby="editSongTabDetails" role="tabpanel" tabindex="0" data-v-210b4214="">
          <div class="form-row" data-v-210b4214=""><label data-v-210b4214=""> Title <input data-testid="title-input" name="title" title="Title" type="text" data-v-210b4214=""></label></div>
          <div class="form-row" data-v-210b4214="">
            <div class="cols" data-v-210b4214=""><label data-v-210b4214=""> Artist <input placeholder="" data-testid="artist-input" name="artist" type="text" data-v-210b4214=""></label><label data-v-210b4214=""> Album Artist <input placeholder="" data-testid="albumArtist-input" name="album_artist" type="text" data-v-210b4214=""></label></div>
          </div>
          <div class="form-row" data-v-210b4214=""><label data-v-210b4214=""> Album <input placeholder="" data-testid="album-input" name="album" type="text" data-v-210b4214=""></label></div>
          <div class="form-row" data-v-210b4214="">
            <div class="cols" data-v-210b4214=""><label data-v-210b4214=""> Track <input placeholder="" data-testid="track-input" min="1" name="track" type="number" data-v-210b4214=""></label><label data-v-210b4214=""> Disc <input placeholder="" data-testid="disc-input" min="1" name="disc" type="number" data-v-210b4214=""></label></div>
          </div>
          <div class="form-row" data-v-210b4214="">
            <div class="cols" data-v-210b4214=""><label data-v-210b4214=""> Genre <input placeholder="" data-testid="genre-input" name="genre" type="text" list="genres" data-v-210b4214=""><datalist id="genres" data-v-210b4214="">
                  <option value="Blues" data-v-210b4214=""></option>
                  <option value="Classic Rock" data-v-210b4214=""></option>
                  <option value="Country" data-v-210b4214=""></option>
                  <option value="Dance" data-v-210b4214=""></option>
                  <option value="Disco" data-v-210b4214=""></option>
                  <option value="Funk" data-v-210b4214=""></option>
                  <option value="Grunge" data-v-210b4214=""></option>
                  <option value="Hip-Hop" data-v-210b4214=""></option>
                  <option value="Jazz" data-v-210b4214=""></option>
                  <option value="Metal" data-v-210b4214=""></option>
                  <option value="New Age" data-v-210b4214=""></option>
                  <option value="Oldies" data-v-210b4214=""></option>
                  <option value="Other" data-v-210b4214=""></option>
                  <option value="Pop" data-v-210b4214=""></option>
                  <option value="R&amp;B" data-v-210b4214=""></option>
                  <option value="Rap" data-v-210b4214=""></option>
                  <option value="Reggae" data-v-210b4214=""></option>
                  <option value="Rock" data-v-210b4214=""></option>
                  <option value="Techno" data-v-210b4214=""></option>
                  <option value="Industrial" data-v-210b4214=""></option>
                  <option value="Alternative" data-v-210b4214=""></option>
                  <option value="Ska" data-v-210b4214=""></option>
                  <option value="Death Metal" data-v-210b4214=""></option>
                  <option value="Pranks" data-v-210b4214=""></option>
                  <option value="Soundtrack" data-v-210b4214=""></option>
                  <option value="Euro-Techno" data-v-210b4214=""></option>
                  <option value="Ambient" data-v-210b4214=""></option>
                  <option value="Trip-Hop" data-v-210b4214=""></option>
                  <option value="Vocal" data-v-210b4214=""></option>
                  <option value="Jazz &amp; Funk" data-v-210b4214=""></option>
                  <option value="Fusion" data-v-210b4214=""></option>
                  <option value="Trance" data-v-210b4214=""></option>
                  <option value="Classical" data-v-210b4214=""></option>
                  <option value="Instrumental" data-v-210b4214=""></option>
                  <option value="Acid" data-v-210b4214=""></option>
                  <option value="House" data-v-210b4214=""></option>
                  <option value="Game" data-v-210b4214=""></option>
                  <option value="Sound Clip" data-v-210b4214=""></option>
                  <option value="Gospel" data-v-210b4214=""></option>
                  <option value="Noise" data-v-210b4214=""></option>
                  <option value="Alternative Rock" data-v-210b4214=""></option>
                  <option value="Bass" data-v-210b4214=""></option>
                  <option value="Punk" data-v-210b4214=""></option>
                  <option value="Space" data-v-210b4214=""></option>
                  <option value="Meditative" data-v-210b4214=""></option>
                  <option value="Instrumental Pop" data-v-210b4214=""></option>
                  <option value="Instrumental Rock" data-v-210b4214=""></option>
                  <option value="Ethnic" data-v-210b4214=""></option>
                  <option value="Gothic" data-v-210b4214=""></option>
                  <option value="Darkwave" data-v-210b4214=""></option>
                  <option value="Techno-Industrial" data-v-210b4214=""></option>
                  <option value="Electronic" data-v-210b4214=""></option>
                  <option value="Pop-Folk" data-v-210b4214=""></option>
                  <option value="Eurodance" data-v-210b4214=""></option>
                  <option value="Dream" data-v-210b4214=""></option>
                  <option value="Southern Rock" data-v-210b4214=""></option>
                  <option value="Comedy" data-v-210b4214=""></option>
                  <option value="Cult" data-v-210b4214=""></option>
                  <option value="Gangsta" data-v-210b4214=""></option>
                  <option value="Top 40" data-v-210b4214=""></option>
                  <option value="Christian Rap" data-v-210b4214=""></option>
                  <option value="Pop/Funk" data-v-210b4214=""></option>
                  <option value="Jungle" data-v-210b4214=""></option>
                  <option value="Native US" data-v-210b4214=""></option>
                  <option value="Cabaret" data-v-210b4214=""></option>
                  <option value="New Wave" data-v-210b4214=""></option>
                  <option value="Psychedelic" data-v-210b4214=""></option>
                  <option value="Rave" data-v-210b4214=""></option>
                  <option value="Showtunes" data-v-210b4214=""></option>
                  <option value="Trailer" data-v-210b4214=""></option>
                  <option value="Lo-Fi" data-v-210b4214=""></option>
                  <option value="Tribal" data-v-210b4214=""></option>
                  <option value="Acid Punk" data-v-210b4214=""></option>
                  <option value="Acid Jazz" data-v-210b4214=""></option>
                  <option value="Polka" data-v-210b4214=""></option>
                  <option value="Retro" data-v-210b4214=""></option>
                  <option value="Musical" data-v-210b4214=""></option>
                  <option value="Rock &amp; Roll" data-v-210b4214=""></option>
                  <option value="Hard Rock" data-v-210b4214=""></option>
                  <option value="Folk" data-v-210b4214=""></option>
                  <option value="Folk-Rock" data-v-210b4214=""></option>
                  <option value="National Folk" data-v-210b4214=""></option>
                  <option value="Swing" data-v-210b4214=""></option>
                  <option value="Fast Fusion" data-v-210b4214=""></option>
                  <option value="Bebob" data-v-210b4214=""></option>
                  <option value="Latin" data-v-210b4214=""></option>
                  <option value="Revival" data-v-210b4214=""></option>
                  <option value="Celtic" data-v-210b4214=""></option>
                  <option value="Bluegrass" data-v-210b4214=""></option>
                  <option value="Avantgarde" data-v-210b4214=""></option>
                  <option value="Gothic Rock" data-v-210b4214=""></option>
                  <option value="Progressive Rock" data-v-210b4214=""></option>
                  <option value="Psychedelic Rock" data-v-210b4214=""></option>
                  <option value="Symphonic Rock" data-v-210b4214=""></option>
                  <option value="Slow Rock" data-v-210b4214=""></option>
                  <option value="Big Band" data-v-210b4214=""></option>
                  <option value="Chorus" data-v-210b4214=""></option>
                  <option value="Easy Listening" data-v-210b4214=""></option>
                  <option value="Acoustic" data-v-210b4214=""></option>
                  <option value="Humour" data-v-210b4214=""></option>
                  <option value="Speech" data-v-210b4214=""></option>
                  <option value="Chanson" data-v-210b4214=""></option>
                  <option value="Opera" data-v-210b4214=""></option>
                  <option value="Chamber Music" data-v-210b4214=""></option>
                  <option value="Sonata" data-v-210b4214=""></option>
                  <option value="Symphony" data-v-210b4214=""></option>
                  <option value="Booty Bass" data-v-210b4214=""></option>
                  <option value="Primus" data-v-210b4214=""></option>
                  <option value="Porn Groove" data-v-210b4214=""></option>
                  <option value="Satire" data-v-210b4214=""></option>
                  <option value="Slow Jam" data-v-210b4214=""></option>
                  <option value="Club" data-v-210b4214=""></option>
                  <option value="Tango" data-v-210b4214=""></option>
                  <option value="Samba" data-v-210b4214=""></option>
                  <option value="Folklore" data-v-210b4214=""></option>
                  <option value="Ballad" data-v-210b4214=""></option>
                  <option value="Power Ballad" data-v-210b4214=""></option>
                  <option value="Rhythmic Soul" data-v-210b4214=""></option>
                  <option value="Freestyle" data-v-210b4214=""></option>
                  <option value="Duet" data-v-210b4214=""></option>
                  <option value="Punk Rock" data-v-210b4214=""></option>
                  <option value="Drum Solo" data-v-210b4214=""></option>
                  <option value="A cappella" data-v-210b4214=""></option>
                  <option value="Euro-House" data-v-210b4214=""></option>
                  <option value="Dance Hall" data-v-210b4214=""></option>
                  <option value="Goa" data-v-210b4214=""></option>
                  <option value="Drum &amp; Bass" data-v-210b4214=""></option>
                  <option value="Club-House" data-v-210b4214=""></option>
                  <option value="Hardcore Techno" data-v-210b4214=""></option>
                  <option value="Terror" data-v-210b4214=""></option>
                  <option value="Indie" data-v-210b4214=""></option>
                  <option value="BritPop" data-v-210b4214=""></option>
                  <option value="Negerpunk" data-v-210b4214=""></option>
                  <option value="Polsk Punk" data-v-210b4214=""></option>
                  <option value="Beat" data-v-210b4214=""></option>
                  <option value="Christian Gangsta Rap" data-v-210b4214=""></option>
                  <option value="Heavy Metal" data-v-210b4214=""></option>
                  <option value="Black Metal" data-v-210b4214=""></option>
                  <option value="Crossover" data-v-210b4214=""></option>
                  <option value="Contemporary Christian" data-v-210b4214=""></option>
                  <option value="Christian Rock" data-v-210b4214=""></option>
                  <option value="Merengue" data-v-210b4214=""></option>
                  <option value="Salsa" data-v-210b4214=""></option>
                  <option value="Thrash Metal" data-v-210b4214=""></option>
                  <option value="Anime" data-v-210b4214=""></option>
                  <option value="JPop" data-v-210b4214=""></option>
                  <option value="SynthPop" data-v-210b4214=""></option>
                  <option value="Abstract" data-v-210b4214=""></option>
                  <option value="Art Rock" data-v-210b4214=""></option>
                  <option value="Baroque" data-v-210b4214=""></option>
                  <option value="Bhangra" data-v-210b4214=""></option>
                  <option value="Big beat" data-v-210b4214=""></option>
                  <option value="Breakbeat" data-v-210b4214=""></option>
                  <option value="Chillout" data-v-210b4214=""></option>
                  <option value="Downtempo" data-v-210b4214=""></option>
                  <option value="Dub" data-v-210b4214=""></option>
                  <option value="EBM" data-v-210b4214=""></option>
                  <option value="Eclectic" data-v-210b4214=""></option>
                  <option value="Electro" data-v-210b4214=""></option>
                  <option value="Electroclash" data-v-210b4214=""></option>
                  <option value="Emo" data-v-210b4214=""></option>
                  <option value="Experimental" data-v-210b4214=""></option>
                  <option value="Garage" data-v-210b4214=""></option>
                  <option value="Global" data-v-210b4214=""></option>
                  <option value="IDM" data-v-210b4214=""></option>
                  <option value="Illbient" data-v-210b4214=""></option>
                  <option value="Industro-Goth" data-v-210b4214=""></option>
                  <option value="Jam Band" data-v-210b4214=""></option>
                  <option value="Krautrock" data-v-210b4214=""></option>
                  <option value="Leftfield" data-v-210b4214=""></option>
                  <option value="Lounge" data-v-210b4214=""></option>
                  <option value="Math Rock" data-v-210b4214=""></option>
                  <option value="New Romantic" data-v-210b4214=""></option>
                  <option value="Nu-Breakz" data-v-210b4214=""></option>
                  <option value="Post-Punk" data-v-210b4214=""></option>
                  <option value="Post-Rock" data-v-210b4214=""></option>
                  <option value="Psytrance" data-v-210b4214=""></option>
                  <option value="Shoegaze" data-v-210b4214=""></option>
                  <option value="Space Rock" data-v-210b4214=""></option>
                  <option value="Trop Rock" data-v-210b4214=""></option>
                  <option value="World Music" data-v-210b4214=""></option>
                  <option value="Neoclassical" data-v-210b4214=""></option>
                  <option value="Audiobook" data-v-210b4214=""></option>
                  <option value="Audio Theatre" data-v-210b4214=""></option>
                  <option value="Neue Deutsche Welle" data-v-210b4214=""></option>
                  <option value="Podcast" data-v-210b4214=""></option>
                  <option value="Indie-Rock" data-v-210b4214=""></option>
                  <option value="G-Funk" data-v-210b4214=""></option>
                  <option value="Dubstep" data-v-210b4214=""></option>
                  <option value="Garage Rock" data-v-210b4214=""></option>
                  <option value="Psybient" data-v-210b4214=""></option>
                </datalist></label><label data-v-210b4214=""> Year <input placeholder="" data-testid="year-input" name="year" type="number" data-v-210b4214=""></label></div>
          </div>
        </div>
        <div id="editSongPanelLyrics" aria-labelledby="editSongTabLyrics" role="tabpanel" tabindex="0" data-v-210b4214="" style="display: none;">
          <div class="form-row" data-v-210b4214=""><textarea data-testid="lyrics-input" name="lyrics" title="Lyrics" data-v-210b4214=""></textarea></div>
        </div>
      </div>
    </main>
    <footer data-v-210b4214=""><button type="submit" data-v-27deb898="" data-v-210b4214="">Update</button><button type="button" class="btn-cancel" white="" data-v-27deb898="" data-v-210b4214="">Cancel</button></footer>
  </form>
</div>
`;

exports[`edits multiple songs 1`] = `
<div class="edit-song" data-testid="edit-song-form" tabindex="0" data-v-210b4214="">
  <form data-v-210b4214="">
    <header data-v-210b4214=""><span class="cover" style="background-image: url(undefined/resources/assets/img/covers/default.svg);" data-v-210b4214=""></span>
      <div class="meta" data-v-210b4214="">
        <h1 class="mixed" data-v-210b4214="">3 songs selected</h1>
        <h2 data-testid="displayed-artist-name" class="mixed" data-v-210b4214="">Mixed Artists</h2>
        <h2 data-testid="displayed-album-name" class="mixed" data-v-210b4214="">Mixed Albums</h2>
      </div>
    </header>
    <main class="tabs" data-v-210b4214="">
      <div class="clear" role="tablist" data-v-210b4214=""><button id="editSongTabDetails" aria-selected="true" aria-controls="editSongPanelDetails" role="tab" type="button" data-v-210b4214=""> Details </button>
        <!--v-if-->
      </div>
      <div class="panes" data-v-210b4214="">
        <div id="editSongPanelDetails" aria-labelledby="editSongTabDetails" role="tabpanel" tabindex="0" data-v-210b4214="">
          <!--v-if-->
          <div class="form-row" data-v-210b4214="">
            <div class="cols" data-v-210b4214=""><label data-v-210b4214=""> Artist <input placeholder="Leave unchanged" data-testid="artist-input" name="artist" type="text" data-v-210b4214=""></label><label data-v-210b4214=""> Album Artist <input placeholder="Leave unchanged" data-testid="albumArtist-input" name="album_artist" type="text" data-v-210b4214=""></label></div>
          </div>
          <div class="form-row" data-v-210b4214=""><label data-v-210b4214=""> Album <input placeholder="Leave unchanged" data-testid="album-input" name="album" type="text" data-v-210b4214=""></label></div>
          <div class="form-row" data-v-210b4214="">
            <div class="cols" data-v-210b4214=""><label data-v-210b4214=""> Track <input placeholder="Leave unchanged" data-testid="track-input" min="1" name="track" type="number" data-v-210b4214=""></label><label data-v-210b4214=""> Disc <input placeholder="Leave unchanged" data-testid="disc-input" min="1" name="disc" type="number" data-v-210b4214=""></label></div>
          </div>
          <div class="form-row" data-v-210b4214="">
            <div class="cols" data-v-210b4214=""><label data-v-210b4214=""> Genre <input placeholder="Leave unchanged" data-testid="genre-input" name="genre" type="text" list="genres" data-v-210b4214=""><datalist id="genres" data-v-210b4214="">
                  <option value="Blues" data-v-210b4214=""></option>
                  <option value="Classic Rock" data-v-210b4214=""></option>
                  <option value="Country" data-v-210b4214=""></option>
                  <option value="Dance" data-v-210b4214=""></option>
                  <option value="Disco" data-v-210b4214=""></option>
                  <option value="Funk" data-v-210b4214=""></option>
                  <option value="Grunge" data-v-210b4214=""></option>
                  <option value="Hip-Hop" data-v-210b4214=""></option>
                  <option value="Jazz" data-v-210b4214=""></option>
                  <option value="Metal" data-v-210b4214=""></option>
                  <option value="New Age" data-v-210b4214=""></option>
                  <option value="Oldies" data-v-210b4214=""></option>
                  <option value="Other" data-v-210b4214=""></option>
                  <option value="Pop" data-v-210b4214=""></option>
                  <option value="R&amp;B" data-v-210b4214=""></option>
                  <option value="Rap" data-v-210b4214=""></option>
                  <option value="Reggae" data-v-210b4214=""></option>
                  <option value="Rock" data-v-210b4214=""></option>
                  <option value="Techno" data-v-210b4214=""></option>
                  <option value="Industrial" data-v-210b4214=""></option>
                  <option value="Alternative" data-v-210b4214=""></option>
                  <option value="Ska" data-v-210b4214=""></option>
                  <option value="Death Metal" data-v-210b4214=""></option>
                  <option value="Pranks" data-v-210b4214=""></option>
                  <option value="Soundtrack" data-v-210b4214=""></option>
                  <option value="Euro-Techno" data-v-210b4214=""></option>
                  <option value="Ambient" data-v-210b4214=""></option>
                  <option value="Trip-Hop" data-v-210b4214=""></option>
                  <option value="Vocal" data-v-210b4214=""></option>
                  <option value="Jazz &amp; Funk" data-v-210b4214=""></option>
                  <option value="Fusion" data-v-210b4214=""></option>
                  <option value="Trance" data-v-210b4214=""></option>
                  <option value="Classical" data-v-210b4214=""></option>
                  <option value="Instrumental" data-v-210b4214=""></option>
                  <option value="Acid" data-v-210b4214=""></option>
                  <option value="House" data-v-210b4214=""></option>
                  <option value="Game" data-v-210b4214=""></option>
                  <option value="Sound Clip" data-v-210b4214=""></option>
                  <option value="Gospel" data-v-210b4214=""></option>
                  <option value="Noise" data-v-210b4214=""></option>
                  <option value="Alternative Rock" data-v-210b4214=""></option>
                  <option value="Bass" data-v-210b4214=""></option>
                  <option value="Punk" data-v-210b4214=""></option>
                  <option value="Space" data-v-210b4214=""></option>
                  <option value="Meditative" data-v-210b4214=""></option>
                  <option value="Instrumental Pop" data-v-210b4214=""></option>
                  <option value="Instrumental Rock" data-v-210b4214=""></option>
                  <option value="Ethnic" data-v-210b4214=""></option>
                  <option value="Gothic" data-v-210b4214=""></option>
                  <option value="Darkwave" data-v-210b4214=""></option>
                  <option value="Techno-Industrial" data-v-210b4214=""></option>
                  <option value="Electronic" data-v-210b4214=""></option>
                  <option value="Pop-Folk" data-v-210b4214=""></option>
                  <option value="Eurodance" data-v-210b4214=""></option>
                  <option value="Dream" data-v-210b4214=""></option>
                  <option value="Southern Rock" data-v-210b4214=""></option>
                  <option value="Comedy" data-v-210b4214=""></option>
                  <option value="Cult" data-v-210b4214=""></option>
                  <option value="Gangsta" data-v-210b4214=""></option>
                  <option value="Top 40" data-v-210b4214=""></option>
                  <option value="Christian Rap" data-v-210b4214=""></option>
                  <option value="Pop/Funk" data-v-210b4214=""></option>
                  <option value="Jungle" data-v-210b4214=""></option>
                  <option value="Native US" data-v-210b4214=""></option>
                  <option value="Cabaret" data-v-210b4214=""></option>
                  <option value="New Wave" data-v-210b4214=""></option>
                  <option value="Psychedelic" data-v-210b4214=""></option>
                  <option value="Rave" data-v-210b4214=""></option>
                  <option value="Showtunes" data-v-210b4214=""></option>
                  <option value="Trailer" data-v-210b4214=""></option>
                  <option value="Lo-Fi" data-v-210b4214=""></option>
                  <option value="Tribal" data-v-210b4214=""></option>
                  <option value="Acid Punk" data-v-210b4214=""></option>
                  <option value="Acid Jazz" data-v-210b4214=""></option>
                  <option value="Polka" data-v-210b4214=""></option>
                  <option value="Retro" data-v-210b4214=""></option>
                  <option value="Musical" data-v-210b4214=""></option>
                  <option value="Rock &amp; Roll" data-v-210b4214=""></option>
                  <option value="Hard Rock" data-v-210b4214=""></option>
                  <option value="Folk" data-v-210b4214=""></option>
                  <option value="Folk-Rock" data-v-210b4214=""></option>
                  <option value="National Folk" data-v-210b4214=""></option>
                  <option value="Swing" data-v-210b4214=""></option>
                  <option value="Fast Fusion" data-v-210b4214=""></option>
                  <option value="Bebob" data-v-210b4214=""></option>
                  <option value="Latin" data-v-210b4214=""></option>
                  <option value="Revival" data-v-210b4214=""></option>
                  <option value="Celtic" data-v-210b4214=""></option>
                  <option value="Bluegrass" data-v-210b4214=""></option>
                  <option value="Avantgarde" data-v-210b4214=""></option>
                  <option value="Gothic Rock" data-v-210b4214=""></option>
                  <option value="Progressive Rock" data-v-210b4214=""></option>
                  <option value="Psychedelic Rock" data-v-210b4214=""></option>
                  <option value="Symphonic Rock" data-v-210b4214=""></option>
                  <option value="Slow Rock" data-v-210b4214=""></option>
                  <option value="Big Band" data-v-210b4214=""></option>
                  <option value="Chorus" data-v-210b4214=""></option>
                  <option value="Easy Listening" data-v-210b4214=""></option>
                  <option value="Acoustic" data-v-210b4214=""></option>
                  <option value="Humour" data-v-210b4214=""></option>
                  <option value="Speech" data-v-210b4214=""></option>
                  <option value="Chanson" data-v-210b4214=""></option>
                  <option value="Opera" data-v-210b4214=""></option>
                  <option value="Chamber Music" data-v-210b4214=""></option>
                  <option value="Sonata" data-v-210b4214=""></option>
                  <option value="Symphony" data-v-210b4214=""></option>
                  <option value="Booty Bass" data-v-210b4214=""></option>
                  <option value="Primus" data-v-210b4214=""></option>
                  <option value="Porn Groove" data-v-210b4214=""></option>
                  <option value="Satire" data-v-210b4214=""></option>
                  <option value="Slow Jam" data-v-210b4214=""></option>
                  <option value="Club" data-v-210b4214=""></option>
                  <option value="Tango" data-v-210b4214=""></option>
                  <option value="Samba" data-v-210b4214=""></option>
                  <option value="Folklore" data-v-210b4214=""></option>
                  <option value="Ballad" data-v-210b4214=""></option>
                  <option value="Power Ballad" data-v-210b4214=""></option>
                  <option value="Rhythmic Soul" data-v-210b4214=""></option>
                  <option value="Freestyle" data-v-210b4214=""></option>
                  <option value="Duet" data-v-210b4214=""></option>
                  <option value="Punk Rock" data-v-210b4214=""></option>
                  <option value="Drum Solo" data-v-210b4214=""></option>
                  <option value="A cappella" data-v-210b4214=""></option>
                  <option value="Euro-House" data-v-210b4214=""></option>
                  <option value="Dance Hall" data-v-210b4214=""></option>
                  <option value="Goa" data-v-210b4214=""></option>
                  <option value="Drum &amp; Bass" data-v-210b4214=""></option>
                  <option value="Club-House" data-v-210b4214=""></option>
                  <option value="Hardcore Techno" data-v-210b4214=""></option>
                  <option value="Terror" data-v-210b4214=""></option>
                  <option value="Indie" data-v-210b4214=""></option>
                  <option value="BritPop" data-v-210b4214=""></option>
                  <option value="Negerpunk" data-v-210b4214=""></option>
                  <option value="Polsk Punk" data-v-210b4214=""></option>
                  <option value="Beat" data-v-210b4214=""></option>
                  <option value="Christian Gangsta Rap" data-v-210b4214=""></option>
                  <option value="Heavy Metal" data-v-210b4214=""></option>
                  <option value="Black Metal" data-v-210b4214=""></option>
                  <option value="Crossover" data-v-210b4214=""></option>
                  <option value="Contemporary Christian" data-v-210b4214=""></option>
                  <option value="Christian Rock" data-v-210b4214=""></option>
                  <option value="Merengue" data-v-210b4214=""></option>
                  <option value="Salsa" data-v-210b4214=""></option>
                  <option value="Thrash Metal" data-v-210b4214=""></option>
                  <option value="Anime" data-v-210b4214=""></option>
                  <option value="JPop" data-v-210b4214=""></option>
                  <option value="SynthPop" data-v-210b4214=""></option>
                  <option value="Abstract" data-v-210b4214=""></option>
                  <option value="Art Rock" data-v-210b4214=""></option>
                  <option value="Baroque" data-v-210b4214=""></option>
                  <option value="Bhangra" data-v-210b4214=""></option>
                  <option value="Big beat" data-v-210b4214=""></option>
                  <option value="Breakbeat" data-v-210b4214=""></option>
                  <option value="Chillout" data-v-210b4214=""></option>
                  <option value="Downtempo" data-v-210b4214=""></option>
                  <option value="Dub" data-v-210b4214=""></option>
                  <option value="EBM" data-v-210b4214=""></option>
                  <option value="Eclectic" data-v-210b4214=""></option>
                  <option value="Electro" data-v-210b4214=""></option>
                  <option value="Electroclash" data-v-210b4214=""></option>
                  <option value="Emo" data-v-210b4214=""></option>
                  <option value="Experimental" data-v-210b4214=""></option>
                  <option value="Garage" data-v-210b4214=""></option>
                  <option value="Global" data-v-210b4214=""></option>
                  <option value="IDM" data-v-210b4214=""></option>
                  <option value="Illbient" data-v-210b4214=""></option>
                  <option value="Industro-Goth" data-v-210b4214=""></option>
                  <option value="Jam Band" data-v-210b4214=""></option>
                  <option value="Krautrock" data-v-210b4214=""></option>
                  <option value="Leftfield" data-v-210b4214=""></option>
                  <option value="Lounge" data-v-210b4214=""></option>
                  <option value="Math Rock" data-v-210b4214=""></option>
                  <option value="New Romantic" data-v-210b4214=""></option>
                  <option value="Nu-Breakz" data-v-210b4214=""></option>
                  <option value="Post-Punk" data-v-210b4214=""></option>
                  <option value="Post-Rock" data-v-210b4214=""></option>
                  <option value="Psytrance" data-v-210b4214=""></option>
                  <option value="Shoegaze" data-v-210b4214=""></option>
                  <option value="Space Rock" data-v-210b4214=""></option>
                  <option value="Trop Rock" data-v-210b4214=""></option>
                  <option value="World Music" data-v-210b4214=""></option>
                  <option value="Neoclassical" data-v-210b4214=""></option>
                  <option value="Audiobook" data-v-210b4214=""></option>
                  <option value="Audio Theatre" data-v-210b4214=""></option>
                  <option value="Neue Deutsche Welle" data-v-210b4214=""></option>
                  <option value="Podcast" data-v-210b4214=""></option>
                  <option value="Indie-Rock" data-v-210b4214=""></option>
                  <option value="G-Funk" data-v-210b4214=""></option>
                  <option value="Dubstep" data-v-210b4214=""></option>
                  <option value="Garage Rock" data-v-210b4214=""></option>
                  <option value="Psybient" data-v-210b4214=""></option>
                </datalist></label><label data-v-210b4214=""> Year <input placeholder="Leave unchanged" data-testid="year-input" name="year" type="number" data-v-210b4214=""></label></div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </main>
    <footer data-v-210b4214=""><button type="submit" data-v-27deb898="" data-v-210b4214="">Update</button><button type="button" class="btn-cancel" white="" data-v-27deb898="" data-v-210b4214="">Cancel</button></footer>
  </form>
</div>
`;
